[gh-88] Fixed leftmost jump arrows.

--- a/source/WebApp/less/imports/codemirror/addon-jump-arrows.css
+++ b/source/WebApp/less/imports/codemirror/addon-jump-arrows.css
@@ -4,6 +4,7 @@
     top: 0;
     bottom: 0;
     right: 0;
+    z-index: 4;
 }
 
 .CodeMirror-jump-arrow {
